--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 body {
   background: url('/assets/img/background-light-310x310.png') left top repeat;
-  color: #e1e1e1;
+  color: #222222; /* #e1e1e1 */
 }
 
 a { color: #0198e1; }
@@ -9,10 +9,14 @@ a { color: #0198e1; }
 /* HEADER
 /********************************/
 
+header.top {
+  margin-bottom: 0px;
+}
+
 header {
+  margin-bottom: 20px;
   background-color: rgba(0, 0, 0, 0.12);
   border-bottom: solid 1px rgba(0, 0, 0, 0.12);
-  margin-bottom: 20px;
 }
 
 header .header { height: 70px; }
@@ -271,7 +275,13 @@ section.body .main h2 {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset;
 }
 
+/********************************/
+/* FORMS
+/********************************/
 
+form.form-horizontal input {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset;
+}
 
 /********************************/
 /* TABLES
@@ -320,6 +330,64 @@ section.body .main h2 {
 .indicator-gain { color: #32cd32; }
 
 .indicator-loss { color: #ff0000; }
+
+/********************************/
+/* AUTHENTICATION
+/********************************/
+
+.authentication .login {
+  margin: 70px auto;
+  width: 350px;
+}
+
+.authentication h1 {
+  margin: 0px;
+  padding: 0px;
+  font-size: 32px;
+  text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
+}
+
+.authentication .login ul {
+  margin: 0px 0px 20px 0px;
+  padding: 0px;
+  list-style-type: none;
+}
+
+.authentication .login ul li input {
+  margin-bottom: 0;
+  background-color: rgba(255, 255, 255, 0.4);
+  height: 18px;
+  padding: 10px 6px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.4);
+}
+
+.authentication .login ul li:first-child input {
+  border-top-color: #a8aBBa;
+  border-bottom: none;
+  border-radius: 5px 5px 0 0;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset;
+}
+
+.authentication .login ul li:last-child input {
+  border: 1px solid #c5c7d2;
+  border-radius: 0 0 5px 5px;
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), -2px 0 4px -3px rgba(0, 0, 0, 0.2) inset, 2px 0 4px -3px rgba(0, 0, 0, 0.2) inset, 0 1px 0 rgba(255, 255, 255, 0.4) inset;
+}
+
+.authentication .login ul li input:focus { border: none; }
+
+.authentication .login ul li input.input-block-level { min-height: 40px; }
+
+.authentication .login .btn-custom {
+  margin: 0px;
+  padding: 0px;
+  height: 38px;
+  line-height: 35px;
+  font-weight: bold;
+}
 
 /********************************/
 /* JQUERY-UI CUSTOMIZATION
