--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
 </head>
 <body>
 
-<header>
+<header class="top">
   <div class="header">
     <div class="container clearfix">
       <div class="title">
@@ -110,15 +110,8 @@
       </div>
     </div>
   </div>
-  <div class="page-title">
-    <div class="container">
-      <div class="page-title">
-        <h1>{% block page_title %}{% endblock page_title %}</h1>
-        <p>This is some helper text.</p>
-      </div>
-    </div>
-  </div>
 </header>
+{% block page_title_base %}{% endblock page_title_base %}
 
 {% if messages %}
 <section class="messages container">
@@ -129,7 +122,7 @@
 </section>
 {% endif %}
 
-{% block content_outer %}{% endblock content_outer %}
+{% block content_base %}{% endblock content_base %}
 
 <footer>
   <div class="container">
@@ -151,7 +144,7 @@
           if( !fixed ) {
               fixed = true;
               $('#fixed-nav').addClass('fixed-navbar')
-          }                                           // It won't matter when static
+          }
       } else {
           if( fixed ) {
               fixed = false;
