--- a/templates/base_dashboard.html
+++ b/templates/base_dashboard.html
@@ -1,9 +1,22 @@
 {% extends "base.html" %}
 
-{% block content_outer %}
+{% block page_title_base %}
+<header>
+  <div class="page-title">
+    <div class="container">
+      <div class="page-title">
+        <h1>{% block page_title %}{% endblock page_title %}</h1>
+        <p>This is some helper text.</p>
+      </div>
+    </div>
+  </div>
+</header>
+{% endblock page_title_base %}
+
+{% block content_base %}
 <section role="body" class="dashboard container">
   <div class="main">
     {% block content %}{% endblock content %}
   </div>
 </section>
-{% endblock content_outer %}
+{% endblock content_base %}
