--- a/templates/base_two_columns.html
+++ b/templates/base_two_columns.html
@@ -1,6 +1,19 @@
 {% extends "base.html" %}
 
-{% block content_outer %}
+{% block page_title_base %}
+<header>
+  <div class="page-title">
+    <div class="container">
+      <div class="page-title">
+        <h1>{% block page_title %}{% endblock page_title %}</h1>
+        <p>This is some helper text.</p>
+      </div>
+    </div>
+  </div>
+</header>
+{% endblock page_title_base %}
+
+{% block content_base %}
 <section role="body" class="body container">
   <div class="row">
     <div class="span12">
@@ -11,6 +24,4 @@
     </div>
   </div>
 </section>
-{% endblock content_outer %}
-
-{% block script %}{% endblock script %}
+{% endblock content_base %}
