--- a/templates/profiles/signin.html
+++ b/templates/profiles/signin.html
@@ -8,30 +8,34 @@
 
 {% block content %}
 <div class="login">
-{% if form.errors %}
-<div class="alert alert-error">
-  <button type="button" class="close" data-dismiss="alert">&times;</button>
-  <strong>Whoops!</strong> Your email address and password didn't match. Please try again.
-</div>
-{% endif %}
-<h1>PortfolioApp</h1>
-<h3>Sign in below</h3>
-<form method="post" action="{% url 'django.contrib.auth.views.login' %}">
-  {% csrf_token %}
-    <ul>
-      <li><input type="text" id="{{ form.username.auto_id }}" name="{{ form.username.html_name }}" placeholder="email" class="input-block-level"></li>
-      <li><input type="password" id="{{ form.password.auto_id }}" name="{{ form.password.html_name }}" placeholder="password" class="input-block-level"></li>
-    </ul>
-    <hr />
-    <input type="submit" value="SIGN IN" class="btn btn-large btn-block btn-custom" />
-</form>
+  {% if form.errors %}
+  <div class="alert alert-error">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    <strong>Whoops!</strong> Your email address and password didn't match. Please try again.
+  </div>
+  {% endif %}
+
+  <h1>PortfolioApp</h1>
+  <div class="widget-profile">
+    <div class="widget-body">
+      <h3>Sign in below</h3>
+      <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
+        {% csrf_token %}
+        <ul>
+          <li><input type="text" id="username" name="{{ form.username.html_name }}" placeholder="email" class="input-block-level"></li>
+          <li><input type="password" id="{{ form.password.auto_id }}" name="{{ form.password.html_name }}" placeholder="password" class="input-block-level"></li>
+        </ul>
+        <input type="submit" value="SIGN IN" class="btn btn-large btn-block btn-custom" />
+      </form>
+    </div>
+  </div>
 </div>
 {% endblock content %}
 
 {% block script %}
 <script type="text/javascript">
   $(document).ready(function(){
-    $('#id_username').focus();
+    $('#username').focus();
   });
 </script>
 {% endblock script %}
