--- a/templates/admin/markets/stocks/dajax_paged_content.html
+++ b/templates/admin/markets/stocks/dajax_paged_content.html
@@ -1,4 +1,4 @@
-<table class="table">
+<table class="table table-striped table-hover table-condensed">
   <thead>
     <tr>
       <th style="width: 70%">Name</th>
@@ -18,17 +18,15 @@
 </table>
 
 <div class="pagination">
-    <span class="step-links">
-        {% if items.has_previous %}
-            <a href="javascript:void(0);" onclick="Dajaxice.portfolioapp.apps.admin.paged_stocks(Dajax.process,{'p':{{ items.previous_page_number }}})">previous</a>
-        {% endif %}
+  <span class="step-links">
+    {% if items.has_previous %}
+      <a href="javascript:void(0);" onclick="Dajaxice.portfolioapp.apps.admin.paged_stocks(Dajax.process,{'p':{{ items.previous_page_number }}})">previous</a>
+    {% endif %}
 
-        <span class="current">
-            Page {{ items.number }} of {{ items.paginator.num_pages }}.
-        </span>
+    <span class="current">Page {{ items.number }} of {{ items.paginator.num_pages }}.</span>
 
-        {% if items.has_next %}
-            <a href="javascript:void(0);" onclick="Dajaxice.portfolioapp.apps.admin.paged_stocks(Dajax.process,{'p':{{ items.next_page_number }}})">next</a>
-        {% endif %}
-    </span>
+    {% if items.has_next %}
+      <a href="javascript:void(0);" onclick="Dajaxice.portfolioapp.apps.admin.paged_stocks(Dajax.process,{'p':{{ items.next_page_number }}})">next</a>
+    {% endif %}
+  </span>
 </div>
