--- a/templates/admin/markets/stocks/ep_paged_content.html
+++ b/templates/admin/markets/stocks/ep_paged_content.html
@@ -1,6 +1,6 @@
 {% load endless %}
 
-<table class="table">
+<table class="table table-striped table-hover table-condensed">
   <thead>
     <tr>
       <th style="width: 65%">Name</th>
