--- a/templates/base.html
+++ b/templates/base.html
@@ -35,24 +35,25 @@
       <div class="title">
         PortfolioApp
       </div>
+      {{ request.view_name }}
       <div class="utilities">
         <ul class="nav nav-pills pull-right">
-          {% if not user.is_authenticated %}
+          {% if not user.is_authenticated and not 'django.contrib.auth.views.login' in request.view_name %}
           <li><a href="{% url 'profile_create' %}">Sign up</a></li>
           {% endif %}
           {% if user.is_authenticated %}
           <li><a href="{% url 'profile_edit' %}">{{ user.get_full_name }}</a></li>
           <li><a href="{% url 'profile_signout' %}">Sign out</a></li>
-          {% else %}
+          {% elif not 'django.contrib.auth.views.login' in request.view_name %}
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign in <b class="caret"></b></a>
-            <div class="pull-right dropdown-menu login-menu widget-profile" style="padding: 15px 15px 5px 15px;">
+            <div class="pull-right dropdown-menu widget-login">
               <h3>Sign in below</h3>
               <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
                 {% csrf_token %}
                 <ul>
-                  <li><input type="text" id="username" name="{{ form.username.html_name }}" placeholder="email" class="input-xlarge"></li>
-                  <li><input type="password" id="{{ form.password.auto_id }}" name="{{ form.password.html_name }}" placeholder="password" class="input-xlarge"></li>
+                  <li><input type="text" id="{{ login_form.username.auto_id }}" name="{{ login_form.username.html_name }}" placeholder="email" class="input-xlarge"></li>
+                  <li><input type="password" id="{{ login_form.password.auto_id }}" name="{{ login_form.password.html_name }}" placeholder="password" class="input-xlarge"></li>
                 </ul>
                 <input type="submit" value="SIGN IN" class="btn btn-large btn-block btn-custom" />
               </form>
@@ -67,29 +68,7 @@
     <div class="navbar navbar-static-top">
       <div class="navbar-inner">
         <div class="container">
-          <ul class="nav">
-            {% if user.is_authenticated %}
-            <li class="active"><a href="/">Dashboard</a></li>
-            <li><a href="/portfolios">Portfolios</a></li>
-            <li><a href="/transactions">Transactions</a></li>
-            {% else %}
-            <li class="active"><a href="/">Home</a></li>
-            {% endif %}
-          </ul>
-          {% if user.is_admin %}
-          <ul class="nav pull-right">
-            <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Admin <b class="caret"></b></a>
-              <ul class="dropdown-menu pull-right">
-                <li><a role="menuitem" tabindex="-1" href="{% url 'portfolioapp.apps.admin.views.home_index' %}">Dashboard</a></li>
-                <li class="divider"></li>
-                <li><a href="{% url 'portfolioapp.apps.admin.views.stock_index' %}">Stocks (standard)</a></li>
-                <li><a href="{% url 'portfolioapp.apps.admin.views.ep_stock_index' %}">Stocks (django-endless-pagination)</a></li>
-                <li><a tabindex="-1" href="{% url 'portfolioapp.apps.admin.views.dajax_stock_index' %}">Stocks (django-dajax)</a></li>
-              </ul>
-            </li>
-          </ul>
-          {% endif %}
+          {% include "common/main_navigation.html" %}
         </div>
       </div>
       <div class="breadcrumbs">
