--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -10,7 +10,7 @@
 <h1>Holdings <span class="link-add">( <a href="{% url 'holding_create' portfolio.id %}">add</a> )</span></h1>
 
 {% if holdings %}
-<table class="table">
+<table class="table table-striped table-hover table-condensed">
   <thead>
     <tr>
       <th>Name</th>
