--- a/templates/portfolios/portfolios/index.html
+++ b/templates/portfolios/portfolios/index.html
@@ -10,7 +10,7 @@
 {% block content %}
 
 {% if portfolios %}
-<table class="table">
+<table class="table table-striped table-hover table-condensed">
   <thead>
     <tr>
       <th style="width: 50%;">Name</th>
