--- a/templates/portfolios/transactions/index.html
+++ b/templates/portfolios/transactions/index.html
@@ -9,15 +9,18 @@
 <h1>Transactions <span class="link-add">( <a href="#">add</a> )</span></h1>
 
 {% if transactions %}
-<table class="table">
-  <tr>
-    <th>Date</th>
-    <th>Type</th>
-    <th class="align-right">Quantity</th>
-    <th class="align-right">Value</th>
-    <th class="align-right">Commission</th>
-    <th>Comment</th>
-  </tr>
+<table class="table table-striped table-hover table-condensed">
+  <thead>
+    <tr>
+      <th>Date</th>
+      <th>Type</th>
+      <th class="align-right">Quantity</th>
+      <th class="align-right">Value</th>
+      <th class="align-right">Commission</th>
+      <th>Comment</th>
+    </tr>
+  </thead>
+  <tbody>
   {% for transaction in transactions %}
   <tr>
     <td>{{ transaction.date_transacted|date:"m/d/Y" }}</td>
@@ -28,6 +31,7 @@
     <td>{{ transaction.comment|default_if_none:"" }}</td>
   </tr>
   {% endfor %}
+  </tbody>
 </table>
 {% else %}
 <p>You currently have no transactions for this holding - <a href="#">go ahead and add some now!</a></p>
