--- a/templates/profiles/signin.html
+++ b/templates/profiles/signin.html
@@ -16,13 +16,13 @@
   {% endif %}
 
   <h1>PortfolioApp</h1>
-  <div class="widget-profile">
+  <div class="widget-login">
     <div class="widget-body">
       <h3>Sign in below</h3>
       <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
         {% csrf_token %}
         <ul>
-          <li><input type="text" id="username" name="{{ form.username.html_name }}" placeholder="email" class="input-block-level"></li>
+          <li><input type="text" id="{{ form.username.auto_id }}" name="{{ form.username.html_name }}" placeholder="email" class="input-block-level"></li>
           <li><input type="password" id="{{ form.password.auto_id }}" name="{{ form.password.html_name }}" placeholder="password" class="input-block-level"></li>
         </ul>
         <input type="submit" value="SIGN IN" class="btn btn-large btn-block btn-custom" />
