--- a/templates/admin/markets/stocks/ep_index.html
+++ b/templates/admin/markets/stocks/ep_index.html
@@ -5,13 +5,18 @@
 
 {% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url "admin_home_index" %}">Admin</a> &rarr; Stocks{% endblock breadcrumbs %}
 
-{% block content %}
+{% block page_title %}Stocks{% endblock page_title %}
 
-<h1>Stocks</h1>
+{% block content %}
 
 <div id="paginate" class="endless_page_template">
   {% include page_template %}
 </div>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
+<p>&nbsp;</p>
 
 {% endblock content %}
 
