--- a/templates/base_dashboard.html
+++ b/templates/base_dashboard.html
@@ -1,13 +1,11 @@
 {% extends "base.html" %}
 
 {% block page_title_base %}
-<header>
-  <div class="page-title">
-    <div class="container">
-      <div class="page-title">
-        <h1>{% block page_title %}{% endblock page_title %}</h1>
-        <p>This is some helper text.</p>
-      </div>
+<header id="bottom">
+  <div class="container">
+    <div class="page-title">
+      <h1>{% block page_title %}{% endblock page_title %}</h1>
+      <p>This is some helper text.</p>
     </div>
   </div>
 </header>
