--- a/templates/common/list_pagination_script.html
+++ b/templates/common/list_pagination_script.html
@@ -1,9 +1,5 @@
 <script src="{{ STATIC_URL }}js/endless-pagination.js" type="text/javascript"></script>
 <script type="text/javascript">
     $('#paginate')
-        .endlessPaginate({
-            onCompleted: function(context, fragment) {
-{#                $('html, body').animate({scrollTop: $('div#paginate').offset().top - 20}, 50);#}
-            }
-        });
+        .endlessPaginate();
 </script>
