--- a/templates/profiles/signin.html
+++ b/templates/profiles/signin.html
@@ -35,7 +35,7 @@
 {% block script %}
 <script type="text/javascript">
   $(document).ready(function(){
-    $('#username').focus();
+    $('#id_username').focus();
   });
 </script>
 {% endblock script %}
