settings for heroku

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -279,37 +279,92 @@ form.form-horizontal input {
 /********************************/
 
 .table {
+  color: #222222;
   font-size: 13px;
-  border-top-left-radius: 15px;
-  border-top-right-radius: 15px;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 1);
+  cursor: default;
+}
+
+.table caption {
+  padding-top: 3px;
+  padding-bottom: 4px;
+  color: #222222;
+  font-weight: bold;
+  text-align: left;
+  text-transform: uppercase;
 }
 
 .table thead th {
-  color: #222222;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 1);
-}
-
-.table tbody tr:hover td,
-.table tbody tr:hover th {
-  border-top: 1px solid #a0c2e5;
-  border-bottom: 1px solid #a0c2e5;
-  background-color: #dce7f2;
-}
-
-.table tr th.align-right,
-.table tr td.align-right {
-  text-align: right;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #dfe0e1;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(1%, #f5f6fa), color-stop(85%, #e5e7ec));
+  background: -webkit-linear-gradient(top, #ffffff 0%, #f5f6fa 1%, #e5e7ec 85%);
+  background: -moz-linear-gradient(top, #ffffff 0%, #f5f6fa 1%, #e5e7ec 85%);
+  background: -ms-linear-gradient(top, #ffffff 0%, #f5f6fa 1%, #e5e7ec 85%);
+  background: -o-linear-gradient(top, #ffffff 0%, #f5f6fa 1%, #e5e7ec 85%);
+  background: linear-gradient(to bottom, #ffffff 0%, #f5f6fa 1%, #e5e7ec 85%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff5f6fa', endColorstr='#ffe5e7ec', GradientType=0 );
+  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
 }
 
 .table tbody td {
   font-size: 12px;
   border-top: 1px solid #cccccc;
-  text-shadow: 0 1px 0 rgba(255, 255, 255, 1);
+  -moz-transition: background 100ms ease-in-out;
+  -webkit-transition: background 100ms ease-in-out;
+  -o-transition: background 100ms ease-in-out;
+  transition: background 100ms ease-in-out;
 }
 
-.table .small { font-size: 11px; }
+.table-striped tbody > tr:nth-child(odd) > td,
+.table-striped tbody > tr:nth-child(odd) > th { background-color: #f9f9f9; }
+
+.table-striped-white tbody > tr:nth-child(even) > td,
+.table-striped-white tbody > tr:nth-child(even) > th { background-color: #ffffff; }
+
+.table-striped-light-blue tbody > tr:nth-child(even) > td,
+.table-striped-light-blue tbody > tr:nth-child(even) > th { background-color: #e9f3fd; }
+
+.table-hover tbody tr:hover th,
+.table-hover tbody tr:hover td { background-color: #dce7f2; }
+
+.table-bordered {
+  border-color: #c4c4c4;
+  border-collapse: separate;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
+}
+
+.table-bordered thead th { border-bottom: 1px solid #c4c4c4; }
+
+.table-bordered tbody td { border-color: #dddddd; }
+
+.table-bordered tbody tr:first-child td { border-top: none; }
+
+.table-bordered tfoot tr:last-child th:first-child,
+.table-bordered tfoot tr:last-child td:first-child {
+  border-bottom-left-radius: 5px;
+}
+
+.table-bordered tfoot tr:last-child th:last-child,
+.table-bordered tfoot tr:last-child td:last-child {
+  border-bottom-right-radius: 5px;
+}
+
+.table-bordered td,
+.table-bordered th { border-left-color: #c4c4c4; }
 
 .table tfoot { background-color: #494949; }
+
+.table tfoot .total th {
+  padding-top: 4px;
+  padding-bottom: 4px;
+  color: #2E3038;
+  background-color: #ffdf7d;
+  vertical-align: top;
+  border-top-color: #d9b751;
+  border-left-color: #d9b751;
+}
 
 .table tfoot .pagination a { font-size: 13px; }
 
@@ -318,27 +373,31 @@ form.form-horizontal input {
   width: 40px;
 }
 
-.indicator-gain { color: #32cd32; }
+.table .indicator-gain { color: #57a957; } /* #32cd32 */
+.table .indicator-loss { color: #db6464; } /* #ff0000 */
 
-.indicator-loss { color: #ff0000; }
+.table tr th.align-right,
+.table tr td.align-right { text-align: right; }
+
+.table .small { font-size: 11px; }
 
 /********************************/
 /* AUTHENTICATION
 /********************************/
 
-.authentication .login {
+.authentication .auth-container {
   margin: 70px auto;
   width: 350px;
 }
 
-.authentication .login h1 {
+.authentication .auth-container h1 {
   margin: 0px;
   padding: 0px;
   font-size: 32px;
   text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
 }
 
-.widget-login {
+.widget-auth {
   margin-bottom: 20px;
   border-radius: 5px;
   color: #333333;
@@ -348,18 +407,18 @@ form.form-horizontal input {
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.35);
 }
 
-.widget-login h3 {
+.widget-auth h3 {
   margin: 0px 0px 15px 0px;
   padding: 0px;
 }
 
-.widget-login ul {
+.widget-auth ul {
   margin: 0px 0px 20px 0px;
   padding: 0px;
   list-style-type: none;
 }
 
-.widget-login ul li input {
+.widget-auth ul li input {
   margin-bottom: 0;
   background-color: rgba(128, 128, 128, 0.2);
   height: 18px;
@@ -370,29 +429,29 @@ form.form-horizontal input {
   text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
 }
 
-.widget-login ul li:first-child input {
+.widget-auth ul li:first-child input {
   border-top-color: #a8aBBa;
   border-bottom: none;
   border-radius: 5px 5px 0 0;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset;
 }
 
-.widget-login ul li:last-child input {
+.widget-auth ul li:last-child input {
   border: 1px solid #c5c7d2;
   border-radius: 0 0 5px 5px;
   box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), -2px 0 4px -3px rgba(0, 0, 0, 0.2) inset, 2px 0 4px -3px rgba(0, 0, 0, 0.2) inset, 0 1px 0 rgba(255, 255, 255, 0.4) inset;
 }
 
-.widget-login ul li input:focus { border: 1px solid #c5c7d2; }
+.widget-auth ul li input:focus { border: 1px solid #c5c7d2; }
 
-.widget-login ul li:first-child input:focus {
+.widget-auth ul li:first-child input:focus {
   border-top-color: #a8abba;
   border-bottom: none;
 }
 
-.widget-login ul li input.input-block-level { height: 40px; }
+.widget-auth ul li input.input-block-level { height: 40px; }
 
-.widget-login .btn-custom {
+.widget-auth .btn-custom {
   margin: 0px;
   padding: 0px;
   color: #ffffff;
