--- a/templates/portfolios/transactions/index_global_paged_content.html
+++ b/templates/portfolios/transactions/index_global_paged_content.html
@@ -2,7 +2,7 @@
 {% load humanize %}
 
 
-<table class="table table-striped table-hover table-condensed">
+<table class="table table-striped table-striped-white table-hover table-condensed table-bordered">
   <caption>This is a caption for the table.</caption>
   <thead>
     <tr>
