--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
           {% elif not 'django.contrib.auth.views.login' in request.view_name %}
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Sign in <b class="caret"></b></a>
-            <div class="pull-right dropdown-menu login-dropdown widget-login">
+            <div class="pull-right dropdown-menu login-dropdown widget-auth">
               <h3>Sign in below</h3>
               <form method="post" action="{% url 'django.contrib.auth.views.login' %}">
                 {% csrf_token %}
