--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,45 +1,482 @@
 body {
-  background-color: #fbfbfb;
+  background: url('/assets/img/background-light-310x310.png') left top repeat;
+  color: #222222; /* #e1e1e1 */
 }
 
-.navbar {
+a { color: #0198e1; }
+
+/********************************/
+/* HEADER
+/********************************/
+
+header .top { margin-bottom: 0px; }
+
+header {
+  background-color: rgba(0, 0, 0, 0.12);
+  border-bottom: solid 1px rgba(0, 0, 0, 0.12);
+}
+
+header#bottom { margin-bottom: 20px; }
+
+header .header { height: 70px; }
+
+header .header .title {
+  float: left;
+  color: #222222;
+  font-size: 28px;
   height: 70px;
+  line-height: 70px;
 }
 
-.breadcrumbs {
+header .header .utilities {
+  float: right;
+  margin-top: 20px;
+  height: 40px;
+  line-height: 40px;
+}
+
+header .menu-container {
+  background-color: #0198e1;
+  box-shadow: 0 1px 10px rgba(0,0,0,.4);
+}
+
+header .fixed-navbar {
+  position: fixed;
+  top: 0px;
+  margin: auto;
+  z-index: 1000;
+  width: 100%;
+}
+
+/* bootstrap override */
+header .menu-container .navbar-inner {
+  height: 41px;
+  border: none;
+  background: url('/assets/img/gradient-menu-1x41.gif') left top repeat-x;
+  box-shadow: 0 1px 10px rgba(0,0,0,.4);
+}
+
+/* bootstrap override */
+header .menu-container .navbar-inner li > a {
+  padding: 0px 15px;
+  height: 41px;
+  line-height: 41px;
+  text-shadow: none;
+}
+
+/* bootstrap override */
+header .menu-container .navbar-inner li.active > a,
+header .menu-container .navbar-inner li > a:hover,
+header .menu-container .navbar-inner li.dropdown.open > .dropdown-toggle {
+  color: #ffffff;
+  background-color: #222222;
+}
+
+/* bootstrap override */
+header .menu-container .navbar-inner li > a:hover {
+  -moz-transition: background 200ms; /* FireFox */
+  -webkit-transition: background 200ms; /* Safari / Chrome */
+  -o-transition: background 200ms; /* Opera */
+  transition: background 200ms; /* W3C */
+}
+
+/* bootstrap override */
+header .menu-container .navbar-inner li > a b { vertical-align: text-top; }
+
+header .dropdown-menu { background-color: #f4f4f5; }
+
+header .breadcrumbs {
+  padding: 8px 15px 8px 15px;
+  color: #b8e4ff;
+  font-weight: bold;
   font-size: 12px;
 }
 
-.link-add {
-  font-size: 15px;
+header .breadcrumbs a {
+  color: #294468;
+  font-weight: bold;
+  text-decoration: none;
+  text-shadow: 0px 1px 1px rgba(170, 175, 182, 1.0);
 }
+
+header .page-title {
+  padding: 8px 0px;
+  color: #222222;
+  text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
+}
+
+header .page-title h1 {
+  margin: 0px;
+  padding: 0px;
+  font-size: 32px;
+  text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
+}
+
+header .page-title h1 small { color: #0198e1; }
+
+/********************************/
+/* BODY
+/********************************/
+
+.dashboard {
+  color: #e6e8eb;
+  background-color: #3b3d40;
+  border-radius: 5px;
+  font-weight: lighter;
+}
+
+.dashboard .main {
+  margin: 0px;
+  padding: 15px;
+}
+
+.dashboard .main h2 {
+  margin: 0px;
+  padding: 0px;
+  font-size: 26px;
+  font-weight: normal;
+}
+
+section.body { color: #222222; }
+
+section.body .main {
+  margin: 0px;
+  padding: 15px;
+}
+
+section.body .main h2 {
+  margin: 0px;
+  padding: 0px;
+  font-size: 26px;
+  font-weight: normal;
+}
+
+/********************************/
+/* WIDGETS
+/********************************/
+
+.widget {
+  margin-bottom: 20px;
+  border-radius: 5px;
+  color: #333333;
+}
+
+.widget-simple {
+  padding: 15px;
+  background-color: #f4f4f5; /* f6f7ff */
+  border: 1px solid #ffffff;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.35);
+}
+
+.widget .widget-header {
+  padding-bottom: 10px;
+  border-bottom: 1px solid #bbbbbb;
+}
+
+.widget .widget-header h3,
+.widget .widget-header h4 {
+  margin: 0px;
+  padding: 0px;
+}
+
+.widget .widget-body {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border-top: 1px solid #ffffff;
+}
+
+.widget .widget-body form {
+  margin: 0px;
+  padding: 0px;
+}
+
+.widget div:last-child {
+  padding-bottom: 0px;
+}
+
+.widget .widget-body ul {
+  margin: 0px;
+  padding: 0px;
+  list-style-type: none;
+}
+
+.widget .widget-body ul li {
+  padding-top: 15px;
+  padding-bottom: 20px;
+  border-bottom: 1px solid #bbbbbb;
+}
+
+.widget .widget-body ul li:first-child {
+  padding-top: 0px;
+}
+
+.widget .widget-body ul.dotted li {
+  border-bottom: 1px dotted #bbbbbb;
+}
+
+.widget .widget-body ul li:last-child {
+  padding-bottom: 5px;
+  border-bottom: none;
+}
+
+.widget .widget-footer {
+  padding-top: 15px;
+  border-top: 1px solid #bbbbbb;
+}
+
+.widget .widget-body p:last-child { margin-bottom: 0px; }
+
+.widget-simple.dark {
+  color: #e6e8eb;
+  background-color: #36383b;
+  font-weight: lighter;
+  border: 1px solid #323437;
+}
+
+.widget-simple.dark .widget-header {
+  border-bottom: 1px solid #000000;
+}
+
+.widget-simple.dark .widget-body {
+  border-top: 1px solid #616161;
+}
+
+.widget .widget-body form {
+  margin: 0px;
+  padding: 0px;
+}
+
+.widget .widget-body form legend {
+  margin: 0px 0px 25px 0px;
+  padding: 0px;
+}
+
+.widget .widget-body form li {
+  margin: 0px;
+  padding-top: 9px;
+  padding-bottom: 9px;
+}
+
+/********************************/
+/* FORMS
+/********************************/
+
+form input[type="text"],
+form input[type="text"]:hover,
+form input[type="text"]:focus,
+form input[type="password"],
+form input[type="password"]:hover,
+form input[type="password"]:focus {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset;
+}
+
+form.form-horizontal input {
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset;
+}
+
+/********************************/
+/* TABLES
+/********************************/
 
 .table {
+  color: #222222;
   font-size: 13px;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 1);
+  cursor: default;
 }
 
-table th {
-  background-color: #f1f1f1;
+.table caption {
+  padding-top: 3px;
+  padding-bottom: 4px;
+  color: #222222;
+  font-weight: bold;
+  text-align: left;
+  text-transform: uppercase;
 }
 
-table tr th.align-right,
-table tr td.align-right {
-  text-align: right;
+.table thead th {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  background-color: #dfe0e1;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #ffffff), color-stop(1%, #f5f6fa), color-stop(85%, #e5e7ec));
+  background: -webkit-linear-gradient(top, #ffffff 0%, #f5f6fa 1%, #e5e7ec 85%);
+  background: -moz-linear-gradient(top, #ffffff 0%, #f5f6fa 1%, #e5e7ec 85%);
+  background: -ms-linear-gradient(top, #ffffff 0%, #f5f6fa 1%, #e5e7ec 85%);
+  background: -o-linear-gradient(top, #ffffff 0%, #f5f6fa 1%, #e5e7ec 85%);
+  background: linear-gradient(to bottom, #ffffff 0%, #f5f6fa 1%, #e5e7ec 85%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff5f6fa', endColorstr='#ffe5e7ec', GradientType=0 );
+  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
 }
 
-.table .small {
-  font-size: 11px;
+.table tbody td {
+  font-size: 12px;
+  border-top: 1px solid #cccccc;
+  -moz-transition: background 100ms ease-in-out;
+  -webkit-transition: background 100ms ease-in-out;
+  -o-transition: background 100ms ease-in-out;
+  transition: background 100ms ease-in-out;
 }
 
-.indicator-gain {
-  color: #32cd32;
+.table-striped tbody > tr:nth-child(odd) > td,
+.table-striped tbody > tr:nth-child(odd) > th { background-color: #f9f9f9; }
+
+.table-striped-white tbody > tr:nth-child(even) > td,
+.table-striped-white tbody > tr:nth-child(even) > th { background-color: #ffffff; }
+
+.table-striped-light-blue tbody > tr:nth-child(even) > td,
+.table-striped-light-blue tbody > tr:nth-child(even) > th { background-color: #e9f3fd; }
+
+.table-hover tbody tr:hover th,
+.table-hover tbody tr:hover td { background-color: #dce7f2; }
+
+.table-bordered {
+  border-color: #c4c4c4;
+  border-collapse: separate;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.25);
 }
 
-.indicator-loss {
-  color: #ff0000;
+.table-bordered thead th { border-bottom: 1px solid #c4c4c4; }
+
+.table-bordered tbody td { border-color: #dddddd; }
+
+.table-bordered tbody tr:first-child td { border-top: none; }
+
+.table-bordered tfoot tr:last-child th:first-child,
+.table-bordered tfoot tr:last-child td:first-child {
+  border-bottom-left-radius: 5px;
 }
 
-/* jquery-ui */
+.table-bordered tfoot tr:last-child th:last-child,
+.table-bordered tfoot tr:last-child td:last-child {
+  border-bottom-right-radius: 5px;
+}
+
+.table-bordered td,
+.table-bordered th { border-left-color: #c4c4c4; }
+
+.table tfoot { background-color: #494949; }
+
+.table tfoot .total th {
+  padding-top: 4px;
+  padding-bottom: 4px;
+  color: #2E3038;
+  background-color: #ffdf7d;
+  vertical-align: top;
+  border-top-color: #d9b751;
+  border-left-color: #d9b751;
+}
+
+.table tfoot .pagination a { font-size: 13px; }
+
+.table tfoot .pagination input {
+  font-size: 13px;
+  width: 40px;
+}
+
+.table .indicator-gain { color: #57a957; } /* #32cd32 */
+.table .indicator-loss { color: #db6464; } /* #ff0000 */
+
+.table tr th.align-right,
+.table tr td.align-right { text-align: right; }
+
+.table .small { font-size: 11px; }
+
+/********************************/
+/* AUTHENTICATION
+/********************************/
+
+.authentication .auth-container {
+  margin: 70px auto;
+  width: 350px;
+}
+
+.authentication .auth-container h1 {
+  margin: 0px;
+  padding: 0px;
+  font-size: 32px;
+  text-shadow: 0px 1px 1px rgba(255, 255, 255, 0.8);
+}
+
+.widget-auth {
+  margin-bottom: 20px;
+  border-radius: 5px;
+  color: #333333;
+  padding: 15px;
+  background-color: #f4f4f5; /* f6f7ff */
+  border: 1px solid #ffffff;
+  box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.35);
+}
+
+.widget-auth h3 {
+  margin: 0px 0px 15px 0px;
+  padding: 0px;
+}
+
+.widget-auth ul {
+  margin: 0px 0px 20px 0px;
+  padding: 0px;
+  list-style-type: none;
+}
+
+.widget-auth ul li input {
+  margin-bottom: 0;
+  background-color: rgba(128, 128, 128, 0.2);
+  height: 18px;
+  padding: 10px 6px;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 18px;
+  text-shadow: 0 1px 0 rgba(255, 255, 255, 0.7);
+}
+
+.widget-auth ul li:first-child input {
+  border-top-color: #a8aBBa;
+  border-bottom: none;
+  border-radius: 5px 5px 0 0;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset;
+}
+
+.widget-auth ul li:last-child input {
+  border: 1px solid #c5c7d2;
+  border-radius: 0 0 5px 5px;
+  box-shadow: 0 1px 0 rgba(255, 255, 255, 0.2), -2px 0 4px -3px rgba(0, 0, 0, 0.2) inset, 2px 0 4px -3px rgba(0, 0, 0, 0.2) inset, 0 1px 0 rgba(255, 255, 255, 0.4) inset;
+}
+
+.widget-auth ul li input:focus { border: 1px solid #c5c7d2; }
+
+.widget-auth ul li:first-child input:focus {
+  border-top-color: #a8abba;
+  border-bottom: none;
+}
+
+.widget-auth ul li input.input-block-level { height: 40px; }
+
+.widget-auth .btn-custom {
+  margin: 0px;
+  padding: 0px;
+  color: #ffffff;
+  height: 38px;
+  line-height: 38px;
+  font-weight: bold;
+  text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.35);
+  border-radius: 5px;
+  background-color: hsl(90, 82%, 20%) !important;
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr="#5ba710", endColorstr="#335c09");
+  background-image: -khtml-gradient(linear, left top, left bottom, from(#5ba710), to(#335c09));
+  background-image: -moz-linear-gradient(top, #5ba710, #335c09);
+  background-image: -ms-linear-gradient(top, #5ba710, #335c09);
+  background-image: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #5ba710), color-stop(100%, #335c09));
+  background-image: -webkit-linear-gradient(top, #5ba710, #335c09);
+  background-image: -o-linear-gradient(top, #5ba710, #335c09);
+  background-image: linear-gradient(#5ba710, #335c09);
+  border-color: #335c09 #335c09 hsl(90, 82%, 16%);
+  -webkit-font-smoothing: antialiased;
+}
+
+/********************************/
+/* JQUERY-UI CUSTOMIZATION
+/********************************/
 
 .ui-autocomplete-loading { background: url('../img/ui-anim_basic_16x16.gif') no-repeat 99% center }
 
@@ -49,10 +486,13 @@ table tr td.align-right {
     overflow-x: hidden;
 }
 
-.ui-menu
-{
+.ui-menu {
   font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 14px;
   color: #333333;
   line-height: 20px;
+}
+
+footer {
+  font-size: 11px;
 }
