--- a/templates/dev/sample1.html
+++ b/templates/dev/sample1.html
@@ -19,25 +19,25 @@
           <li class="control-group">
             <label class="control-label">Field 1</label>
             <div class="controls">
-              <input type="text" class="input-medium">
+              <input type="text" class="input-medium" placeholder=".input-medium">
             </div>
           </li>
           <li class="control-group">
             <label class="control-label">Field 2</label>
             <div class="controls">
-              <input type="text">
+              <input type="text" class="input-large" placeholder=".input-large">
             </div>
           </li>
           <li class="control-group">
             <label class="control-label">Field 3</label>
             <div class="controls">
-              <input type="text" class="input-xlarge">
+              <input type="text" class="input-xlarge" placeholder=".input-xlarge">
             </div>
           </li>
           <li class="control-group">
             <label class="control-label">Field 4</label>
             <div class="controls">
-              <input type="text" class="input-xxlarge">
+              <input type="text" class="input-xxlarge" placeholder=".input-xxlarge">
             </div>
           </li>
         </ul>
