--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,9 @@
+/********************************/
+/* COMMON
+/********************************/
 body {
-  background: url('/static/img/background-light-310x310.png') left top repeat;
-  color: #222222; /* #e1e1e1 */
+  background: url('../img/background-light-279x279.jpg') left top repeat;
+  color: #222222;
 }
 
 a { color: #0198e1; }
@@ -37,7 +40,7 @@ header .header .utilities {
 
 header .menu-container {
   background-color: #0198e1;
-  box-shadow: 0 1px 10px rgba(0,0,0,.4);
+  box-shadow: 0 1px 10px rgba(0, 0, 0, .4);
 }
 
 header .fixed-navbar {
@@ -48,15 +51,13 @@ header .fixed-navbar {
   width: 100%;
 }
 
-/* bootstrap override */
 header .menu-container .navbar-inner {
   height: 41px;
   border: none;
   background: url('/static/img/gradient-menu-1x41.gif') left top repeat-x;
-  box-shadow: 0 1px 10px rgba(0,0,0,.4);
+  box-shadow: 0 1px 10px rgba(0, 0, 0, .4);
 }
 
-/* bootstrap override */
 header .menu-container .navbar-inner li > a {
   padding: 0px 15px;
   height: 41px;
@@ -64,7 +65,6 @@ header .menu-container .navbar-inner li > a {
   text-shadow: none;
 }
 
-/* bootstrap override */
 header .menu-container .navbar-inner li.active > a,
 header .menu-container .navbar-inner li > a:hover,
 header .menu-container .navbar-inner li.dropdown.open > .dropdown-toggle {
@@ -72,7 +72,6 @@ header .menu-container .navbar-inner li.dropdown.open > .dropdown-toggle {
   background-color: #222222;
 }
 
-/* bootstrap override */
 header .menu-container .navbar-inner li > a:hover {
   -moz-transition: background 200ms; /* FireFox */
   -webkit-transition: background 200ms; /* Safari / Chrome */
@@ -80,7 +79,6 @@ header .menu-container .navbar-inner li > a:hover {
   transition: background 200ms; /* W3C */
 }
 
-/* bootstrap override */
 header .menu-container .navbar-inner li > a b { vertical-align: text-top; }
 
 header .dropdown-menu { background-color: #f4f4f5; }
@@ -206,13 +204,9 @@ section.body .main h2 {
   border-bottom: 1px solid #bbbbbb;
 }
 
-.widget .widget-body ul li:first-child {
-  padding-top: 0px;
-}
+.widget .widget-body ul li:first-child { padding-top: 0px; }
 
-.widget .widget-body ul.dotted li {
-  border-bottom: 1px dotted #bbbbbb;
-}
+.widget .widget-body ul.dotted li { border-bottom: 1px dotted #bbbbbb; }
 
 .widget .widget-body ul li:last-child {
   padding-bottom: 5px;
@@ -233,13 +227,9 @@ section.body .main h2 {
   border: 1px solid #323437;
 }
 
-.widget-simple.dark .widget-header {
-  border-bottom: 1px solid #000000;
-}
+.widget-simple.dark .widget-header { border-bottom: 1px solid #000000; }
 
-.widget-simple.dark .widget-body {
-  border-top: 1px solid #616161;
-}
+.widget-simple.dark .widget-body { border-top: 1px solid #616161; }
 
 .widget .widget-body form {
   margin: 0px;
@@ -270,8 +260,12 @@ form input[type="password"]:focus {
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset;
 }
 
-form.form-horizontal input {
-  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset;
+form.form-horizontal input { box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2) inset; }
+
+.form-section {
+  color: #0198e1;
+  font-size: 17px;
+  font-weight: bold;
 }
 
 /********************************/
@@ -279,7 +273,7 @@ form.form-horizontal input {
 /********************************/
 
 .table {
-  color: #222222;
+  color: #333333;
   font-size: 13px;
   text-shadow: 0 1px 0 rgba(255, 255, 255, 1);
   cursor: default;
@@ -354,8 +348,6 @@ form.form-horizontal input {
 .table-bordered td,
 .table-bordered th { border-left-color: #c4c4c4; }
 
-.table tfoot { background-color: #494949; }
-
 .table tfoot .total th {
   padding-top: 4px;
   padding-bottom: 4px;
@@ -366,9 +358,38 @@ form.form-horizontal input {
   border-left-color: #d9b751;
 }
 
-.table tfoot .pagination a { font-size: 13px; }
+.table tfoot .footer {
+  background-color: #e5e6ec;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #dee3e7), color-stop(100%, #f5f6f7));
+  background: -webkit-linear-gradient(top, #dee3e7 0%, #f5f6f7 100%);
+  background: -moz-linear-gradient(top, #dee3e7 0%, #f5f6f7 100%);
+  background: -ms-linear-gradient(top, #dee3e7 0%, #f5f6f7 100%);
+  background: -o-linear-gradient(top, #dee3e7 0%, #f5f6f7 100%);
+  background: linear-gradient(top, #dee3e7 0%, #f5f6f7 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffdee3e7', endColorstr='#fff5f6f7', GradientType=0 );
+  filter: progid:dximagetransform.microsoft.gradient(enabled=false);
+  -webkit-box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.15);
+  -moz-box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.15);
+}
 
-.table tfoot .pagination input {
+.table tfoot .footer th {
+  height: 40px;
+  line-height: 40px;
+  font-weight: normal;
+}
+
+.table tfoot .footer .helper { padding-left: 3px; }
+
+.table tfoot .footer .pagination {
+  margin: 0px;
+  padding-right: 3px;
+  height: 40px;
+  line-height: 40px;
+}
+
+.table tfoot .footer a { font-size: 13px; }
+
+.table tfoot .footer input {
   font-size: 13px;
   width: 40px;
 }
@@ -379,10 +400,12 @@ form.form-horizontal input {
 .table tr th.align-right,
 .table tr td.align-right { text-align: right; }
 
-.table .small { font-size: 11px; }
+.table tr td .large { font-size: 19px; }
+.table tr td .medium { font-size: 14px; font-weight: bold; }
+.table tr td .small { font-size: 12px; }
 
 /********************************/
-/* AUTHENTICATION
+/* AUTHENTICATION (SIGN IN, SIGN OUT)
 /********************************/
 
 .authentication .auth-container {
@@ -475,7 +498,7 @@ form.form-horizontal input {
 }
 
 /********************************/
-/* JQUERY-UI CUSTOMIZATION
+/* JQUERY-UI
 /********************************/
 
 .ui-autocomplete-loading { background: url('../img/ui-anim_basic_16x16.gif') no-repeat 99% center }
@@ -493,6 +516,8 @@ form.form-horizontal input {
   line-height: 20px;
 }
 
-footer {
-  font-size: 11px;
-}
+/********************************/
+/* FOOTER
+/********************************/
+
+footer { font-size: 11px; }
