--- a/templates/admin/markets/stocks/dajax_index.html
+++ b/templates/admin/markets/stocks/dajax_index.html
@@ -13,6 +13,6 @@
 {% endblock content %}
 
 {% block script %}
-<script src="{{ STATIC_URL }}js/dajaxice.core.js" type="text/javascript"></script>
-<script src="{{ STATIC_URL }}js/jquery.dajax.core.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}dajaxice/dajaxice.core.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}dajax/jquery.dajax.core.js" type="text/javascript"></script>
 {% endblock script %}
