--- a/templates/admin/markets/stocks/index.html
+++ b/templates/admin/markets/stocks/index.html
@@ -7,7 +7,7 @@
 {% block content %}
 
 {% if stocks %}
-<table class="table">
+<table class="table table-striped table-striped-white table-hover table-bordered table-condensed">
   <thead>
     <tr>
       <th>Name</th>
@@ -38,8 +38,7 @@
       <a href="?page={{ stocks.next_page_number }}">Next</a>
     {% endif %}
   </span>
-
 </div>
-
 {% endif %}
+
 {% endblock content %}
