--- a/templates/base.html
+++ b/templates/base.html
@@ -12,6 +12,10 @@
   <link href="http://code.jquery.com/ui/1.10.0/themes/base/jquery-ui.css" rel="stylesheet" type="text/css" media="all" />
   <link href="{{ STATIC_URL }}css/bootstrap.min.css" rel="stylesheet" type="text/css" media="screen">
   <link href="{{ STATIC_URL }}css/styles.css" rel="stylesheet" type="text/css" media="screen">
+  <link href="{{ STATIC_URL }}css/font-awesome.min.css" rel="stylesheet">
+  <!--[if IE 7]>
+  <link href="{{ STATIC_URL }}css/font-awesome-ie7.min.css" rel="stylesheet">
+  <![endif]-->
 
   <link rel="apple-touch-icon-precomposed" sizes="144x144" href="#">
   <link rel="apple-touch-icon-precomposed" sizes="114x114" href="#">
@@ -20,12 +24,12 @@
   <link rel="shortcut icon" type="image/x-icon" href="{{ STATIC_URL }}img/favicon.ico">
 
   <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+  <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 
   <script src="http://code.jquery.com/jquery-1.9.0.js" type="text/javascript"></script>
   <script src="http://code.jquery.com/ui/1.10.0/jquery-ui.js" type="text/javascript"></script>
-  <script src="{{ STATIC_URL }}js/bootstrap.js" type="text/javascript"></script>
+  <script src="{{ STATIC_URL }}js/bootstrap.min.js" type="text/javascript"></script>
 </head>
 <body>
 
@@ -82,10 +86,12 @@
 
 {% if messages %}
 <section class="messages container">
+  {% for message in messages %}
   <div class="alert alert-success">
     <button type="button" class="close" data-dismiss="alert">&times;</button>
-    This is a message
+    This is a message {{ message }}
   </div>
+  {% endfor %}
 </section>
 {% endif %}
 
