--- a/templates/common/list_pagination.html
+++ b/templates/common/list_pagination.html
@@ -1,28 +1,26 @@
 {% load endless %}
 
 {% get_pages %}
-<div class="pagination">
-  <div class="pull-left">
-    Displaying <strong>{{ pages.current_start_index }}</strong> to <strong>{{ pages.current_end_index }}</strong> of <strong>{{ pages.total_count }}</strong>
-  </div>
-  <div class="pull-right">
-    <form>
-    Page <strong>{{ pages.current.number }}</strong> of <strong>{{ pages.last.number }}</strong> &nbsp;
+<div class="helper pull-left">
+  Displaying <strong>{{ pages.current_start_index }}</strong> to <strong>{{ pages.current_end_index }}</strong> of <strong>{{ pages.total_count }}</strong>
+</div>
+<div class="pagination pull-right">
+  Page <strong>{{ pages.current.number }}</strong> of <strong>{{ pages.last.number }}</strong> &nbsp;
 {#      Page: <input type="text" value="{{ pages.current.number }}" /> of {{ pages.last.number }}#}
+  <div class="btn-group">
     {% if not pages.current.is_first %}
-    <a href="{{ pages.1.path }}" rel="page" class="btn endless_page_link" title="First"><i class="icon-chevron-left"></i></a>
-    <a href="{{ pages.previous.path }}" rel="page" class="btn endless_page_link" title="Previous"><i class="icon-chevron-left"></i></a>
+    <a href="{{ pages.1.path }}" rel="page" class="btn endless_page_link" title="First"><b>First</b></a>
+    <a href="{{ pages.previous.path }}" rel="page" class="btn endless_page_link" title="Previous"><b>Previous</b></a>
     {% else %}
-    <a href="javascript:void(0);" rel="page" class="btn disabled" title="First"><i class="icon-chevron-left"></i></a>
-    <a href="javascript:void(0);" rel="page" class="btn disabled" title="Previous"><i class="icon-chevron-left"></i></a>
+    <a href="javascript:void(0);" rel="page" class="btn disabled" title="First"><b>First</b></a>
+    <a href="javascript:void(0);" rel="page" class="btn disabled" title="Previous"><b>Previous</b></a>
     {% endif %}
     {% if not pages.current.is_last %}
-    <a href="{{ pages.next.path }}" rel="page" class="btn endless_page_link" title="Next"><i class="icon-chevron-right"></i></a>
-    <a href="{{ pages.last.path }}" rel="page" class="btn endless_page_link" title="Last"><i class="icon-chevron-right"></i></a>
+    <a href="{{ pages.next.path }}" rel="page" class="btn endless_page_link" title="Next"><b>Next</b></a>
+    <a href="{{ pages.last.path }}" rel="page" class="btn endless_page_link" title="Last"><b>Last</b></a>
     {% else %}
-    <a href="javascript:void(0);" class="btn disabled"><i class="icon-chevron-right"></i></a>
-    <a href="javascript:void(0);" class="btn disabled"><i class="icon-chevron-right"></i></a>
+    <a href="javascript:void(0);" class="btn disabled"><b>Next</b></a>
+    <a href="javascript:void(0);" class="btn disabled"><b>Last</b></a>
     {% endif %}
-    </form>
   </div>
 </div>
