--- a/templates/common/list_pagination_script.html
+++ b/templates/common/list_pagination_script.html
@@ -1,4 +1,4 @@
-<script src="{{ STATIC_URL }}js/endless-pagination.js" type="text/javascript"></script>
+<script src="{{ STATIC_URL }}endless_pagination/js/endless-pagination.js" type="text/javascript"></script>
 <script type="text/javascript">
     $('#paginate')
         .endlessPaginate();
