--- a/templates/portfolios/transactions/index.html
+++ b/templates/portfolios/transactions/index.html
@@ -1,15 +1,15 @@
 {% extends "base_two_columns.html" %}
 
-{% block title %}Transactions{% endblock title %}
+{% block browser_title %}Transactions{% endblock browser_title %}
 
 {% block breadcrumbs %}<a href="/">Home</a> &rarr; <a href="{% url 'portfolio_index' %}">Portfolios</a> &rarr; <a href="{% url 'holding_index' holding.portfolio.id %}">{{ holding.portfolio.name }}</a> &rarr; {{ holding.full_name }}{% endblock breadcrumbs %}
 
+{% block page_title %}Transactions{% endblock page_title %}
+
 {% block content %}
 
-<h1>Transactions <span class="link-add">( <a href="#">add</a> )</span></h1>
-
 {% if transactions %}
-<table class="table table-striped table-hover table-condensed">
+<table class="table table-striped table-striped-white table-hover table-bordered">
   <thead>
     <tr>
       <th>Date</th>
