--- a/templates/profiles/edit.html
+++ b/templates/profiles/edit.html
@@ -4,7 +4,7 @@
 
 {% block breadcrumbs %}<a href="/">Home</a> &rarr; Profile{% endblock breadcrumbs %}
 
-{% block page_title %}Edit Profile{% endblock page_title %}
+{% block page_title %}<i class="icon-user"></i> Edit Profile{% endblock page_title %}
 
 {% block content %}
 
@@ -15,39 +15,49 @@
 </div>
 {% endif %}
 
-<form method="post" action="" class="form-horizontal">
-  {% csrf_token %}
-  <div class="control-group">
-    <label class="control-label" for="{{ form.email.auto_id }}">Email</label>
-    <div class="controls">
-      <input type="text" id="{{ form.email.auto_id }}" name="{{ form.email.html_name }}" value="{{ form.email.value }}" placeholder="Email address...">
-    </div>
+<div class="widget widget-simple">
+  <div class="widget-header">
+    <h4><i class="icon-user"></i> Form example</h4>
   </div>
-  <div class="control-group">
-    <label class="control-label" for="{{ form.first_name.auto_id }}">First Name</label>
-    <div class="controls">
-      <input type="text" id="{{ form.first_name.auto_id }}" name="{{ form.first_name.html_name }}" value="{{ form.first_name.value }}" placeholder="First name...">
-    </div>
+  <div class="widget-body">
+    <form method="post" action="" class="form-horizontal">
+      {% csrf_token %}
+      <fieldset>
+        <ul class="dotted">
+          <li class="control-group">
+            <label class="control-label" for="{{ form.email.auto_id }}">Email</label>
+            <div class="controls">
+              <input type="text" id="{{ form.email.auto_id }}" name="{{ form.email.html_name }}" value="{{ form.email.value }}" placeholder="email" class="input-xlarge">
+            </div>
+          </li>
+          <li class="control-group">
+            &nbsp;
+          </li>
+          <li class="control-group">
+            <label class="control-label" for="{{ form.first_name.auto_id }}">First Name</label>
+            <div class="controls">
+              <input type="text" id="{{ form.first_name.auto_id }}" name="{{ form.first_name.html_name }}" value="{{ form.first_name.value }}" placeholder="first name" class="input-xlarge">
+            </div>
+          </li>
+          <li class="control-group">
+            <label class="control-label" for="{{ form.last_name.auto_id }}">Last Name</label>
+            <div class="controls">
+              <input type="text" id="{{ form.last_name.auto_id }}" name="{{ form.last_name.html_name }}" value="{{ form.last_name.value }}" placeholder="last name" class="input-xlarge">
+            </div>
+          </li>
+          <li class="control-group">
+            <div class="controls">
+              <button type="submit" class="btn btn-success">Save profile</button>
+              <button type="submit" class="btn" name="cancel">Cancel</button>
+            </div>
+          </li>
+        </ul>
+      </fieldset>
+    </form>
   </div>
-  <div class="control-group">
-    <label class="control-label" for="{{ form.last_name.auto_id }}">Last Name</label>
-    <div class="controls">
-      <input type="text" id="{{ form.last_name.auto_id }}" name="{{ form.last_name.html_name }}" value="{{ form.last_name.value }}" placeholder="Last name...">
-    </div>
-  </div>
-  <div class="control-group">
-    <div class="controls">
-      <button type="submit" class="btn btn-primary">Save profile</button>
-      <button type="submit" class="btn" name="cancel">Cancel</button>
-    </div>
-  </div>
-</form>
+</div>
 
 {% endblock content %}
-
-{% block sidebar %}
-<p>Sidebar</p>
-{% endblock sidebar %}
 
 {% block script %}
 <script type="text/javascript">
