--- a/templates/portfolios/holdings/index.html
+++ b/templates/portfolios/holdings/index.html
@@ -8,7 +8,6 @@
 {% block page_title %}Holdings{% endblock page_title %}
 
 {% block content %}
-
 {% if holdings %}
 <table class="table table-striped table-striped-white table-hover table-bordered">
   <thead>
@@ -57,9 +56,10 @@
 {#    </tr>#}
     <tr class="total">
       <th colspan="3"><strong>Total</strong></th>
-      <th class="align-right"><strong>$3456.33</strong></th>
-      <th class="align-right"><strong>$3456.33</strong></th>
-      <th colspan="2" class="align-right">100%</th>
+      <th class="align-right"><strong>${{ holding_summary.total_book_value|floatformat:2|intcomma }}</strong></th>
+      <th class="align-right"><strong>${{ holding_summary.total_market_value|floatformat:2|intcomma }}</strong></th>
+      <th class="align-right"><strong>${{ holding_summary.total_net_gain_dollar|floatformat:2|intcomma }}</strong></th>
+      <th class="align-right">100%</th>
     </tr>
   </tfoot>
 </table>
