--- a/templates/portfolios/transactions/index.html
+++ b/templates/portfolios/transactions/index.html
@@ -8,37 +8,16 @@
 
 {% block content %}
 
-{% if transactions %}
-<table class="table table-striped table-striped-white table-hover table-bordered">
-  <thead>
-    <tr>
-      <th>Date</th>
-      <th>Type</th>
-      <th class="align-right">Quantity</th>
-      <th class="align-right">Value</th>
-      <th class="align-right">Commission</th>
-      <th>Comment</th>
-    </tr>
-  </thead>
-  <tbody>
-  {% for transaction in transactions %}
-  <tr>
-    <td>{{ transaction.date_transacted|date:"m/d/Y" }}</td>
-    <td>{{ transaction.get_type_display }}</td>
-    <td class="align-right">{{ transaction.quantity }}</td>
-    <td class="align-right">${{ transaction.value|floatformat:2 }}</td>
-    <td class="align-right">${{ transaction.commission|floatformat:2 }}</td>
-    <td>{{ transaction.comment|default_if_none:"" }}</td>
-  </tr>
-  {% endfor %}
-  </tbody>
-</table>
-{% else %}
-<p>You currently have no transactions for this holding - <a href="#">go ahead and add some now!</a></p>
-{% endif %}
+<div id="paginate" class="endless_page_template">
+  {% include page_template %}
+</div>
 
 {% endblock content %}
 
 {% block sidebar %}
 Sidebar
 {% endblock sidebar %}
+
+{% block script %}
+  {% include "common/list_pagination_script.html" %}
+{% endblock script %}
